--- a/ecsCore.WebApi/appsettings.json
+++ b/ecsCore.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = (localdb)\\mssqllocaldb; Database = ecsCoreDB; Trusted_Connection = True; "
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
