--- a/ecsCore.OAuth/Properties/launchSettings.json
+++ b/ecsCore.OAuth/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5001/",
+      "applicationUrl": "http://localhost:61504/",
       "sslPort": 0
     }
   },
@@ -11,18 +11,16 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/data",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ecsCore.WebApi": {
+    "ecsCore.OAuth": {
       "commandName": "Project",
-      "launchUrl": "api/data",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5001"
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
